# AI_Research_Agent

./: .env  .gitignore  README.md  main.py  ps.excalidraw  pyproject.toml  requirements.txt
notebooks/: experiments.ipynb
research_and_analyst/backend_server/: workflow.py
research_and_analyst/exceptions/: custom_exception.py
research_and_analyst/logger/: __init__.py
research_and_analyst/notebooks/: experiments.ipynb
research_and_analyst/utils/: model_loader.py
